# Depth-Estimation-App

./: .gitignore  README.md  build.sh  build_and_run.sh  clean_up.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.py
notebooks/: 2024-11-16-depth-anything-launch-and-benchmark.ipynb  2024-11-23-benchmark-depth-anything-models.ipynb  2024-11-27-utilize-spatial-bot.ipynb
src/backend/: .dockerignore  Dockerfile  main.py
src/backend/api/: main.py
src/backend/models/: depth_model.py  lvlm_model.py
src/depth_estimation/: depth_dataset.py  estimation_model.py
src/depth_estimation/depth_anything/: dpt.py
src/depth_estimation/depth_anything_v2/: dpt.py
src/frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
src/frontend/src/: App.tsx  api.js  index.tsx
src/frontend/src/components/: CameraStream.tsx  CameraStreamPage.tsx  DepthGPTPage.tsx  DepthMapDisplay.tsx  ErrorMessage.tsx  ImageUploadPage.tsx  ImageUploader.tsx  LoadingSpinner.tsx  Navbar.tsx  SuccessMessage.tsx  styles.ts
src/frontend/src/hooks/: useDepthGPT.ts  useDepthPrediction.ts
